--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dev_dependencies:
     # package. See that file for information about deactivating specific lint
     # rules and activating additional ones.
     flutter_lints: ^6.0.0
+    provider: ^6.1.2
+    shared_preferences: ^2.2.3
+    flutter_layout_grid: ^2.0.7
+    flutter_staggered_grid_view: ^0.7.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
