--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,13 @@ dependencies:
     flutter:
         sdk: flutter
     photo_manager: ^3.0.0
+    crop_your_image: ^1.0.2
+    image: ^4.1.3
 
     # The following adds the Cupertino Icons font to your application.
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.8
+    share_plus: ^7.2.1
 
 dev_dependencies:
     flutter_test:
